--- a/index.html
+++ b/index.html
@@ -1,5 +1,20 @@
-<html>
+<html ng-app="uno">
+    <header>
+        <title>Uno - mY</title>
+        
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        
+    </header>
     <body>
         <h1>Hello SkyWalkerSounds !</h1>
+        <h2>how are you?</h2>
+        <div ng-controller="index">
+            <p>{{message}}</p>
+        </div>
     </body>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap.min.js"></script>
+    <script src="scripts/scripts.js"></script>
+    <script src="scripts/app.js"></script>
 </html>
